--- a/myrep/.tko/repository.yaml
+++ b/myrep/.tko/repository.yaml
@@ -12,7 +12,7 @@ sources:
   type: clone
   branch: master
   cache_path: /workspaces/poo-dd-cd-bloco-c-Maryyyy17/myrep/.tko/cache/poo/Readme.md
-  cache_timestamp: '2025-11-14 00:23:32'
+  cache_timestamp: '2025-11-25 23:27:30'
   filters:
   - listas
 expanded:
@@ -26,4 +26,4 @@ flags:
   graph: 1
   xray: 0
 lang: py
-selected: poo@lapiseira
+selected: poo@pula-pula
